# discharge-delay-flags

./: .gitignore  IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  pyproject.toml  run_discharge_delay_workflow.py
.github/workflows/: ci.yml
demo/: about.html  data.html  index.html  metrics.html
demo/assets/: demo.css  demo.js
demo/data/: action_examples.json  control_chart.json  control_chart_unit.json  delay_reasons.json  demo_bundle.js  demo_summary.json  docs.json  filters.json  management_worklist.json  scenarios.json
docs/: METRICS_AND_SIGNALS.md  model_metrics_summary.csv  scenario_run_summary.csv
sample_data/: README.md
sample_data/balanced/: action_adoption_audit.csv  admin_delay_dashboard_metrics.csv  bed_resource_daily.parquet  blocker_pareto.csv  control_chart_points.csv  delay_blocker_attribution.parquet  delay_resolution_actions.csv  delay_resolution_actions_all.csv  discharge_delay_reference.parquet  discharge_delay_sentinel_report.html  discharge_delay_sentinel_report.md  management_signal_groups.csv  management_signal_kpis.csv  operational_delay_dashboard.html  out_of_bounds_delay_flags.parquet  patient_admission_events.parquet  patient_journey_events.parquet  patient_oob_risk_scores.parquet  prediction_metrics.json  ranked_actionable_signals.csv  scenario_detection_summary.csv  service_availability.parquet  unit_delay_heatmap.csv
sample_data/diagnostics_heavy/: action_adoption_audit.csv  admin_delay_dashboard_metrics.csv  bed_resource_daily.parquet  blocker_pareto.csv  control_chart_points.csv  (+18 more)
scripts/: build_demo.py  export_dashboard.py
(+25 files in other folders)
